adding some content

--- a/templates/title-slide.html
+++ b/templates/title-slide.html
@@ -5,7 +5,8 @@
   $endif$
   $if(title-image)$
     <figure>
-      <img src="$title-image$" $if(title-image-width)$width="$title-image-width$"$endif$ />
+      <img src="$title-image$" $if(title-image-width)$width="$title-image-width$"$endif$ 
+      alt="$title-image-alt$"/>
   $if(title-image-caption)$
       <figcaption style="font-size: 60%; color: #555;">$title-image-caption$</figcaption>
   $endif$
